--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
         "behat/behat"                       : "~3.0",
         "behat/symfony2-extension"          : "~2.1",
         "phpunit/phpunit"                   : "~5.1",
-        "swiftmailer/swiftmailer"           : "~5.4",
-        "symfony/dependency-injection"      : "~2.8|~3.0",
-        "symfony/web-profiler-bundle"       : "~2.8|~3.0"
+        "swiftmailer/swiftmailer"           : "^5.0|^6.0",
+        "symfony/dependency-injection"      : "~2.8|^3.0|^4.0",
+        "symfony/web-profiler-bundle"       : "~2.8|^3.0|^4.0"
     },
     "require-dev": {
         "phpspec/phpspec"                   : "^2.4",
